turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:23: error: not found: value etat
	rule(etat)(colors(pos))(MVT_SUIVANT) match
             ^